--- a/public/index.html
+++ b/public/index.html
@@ -173,12 +173,15 @@
         .table-wrapper {
             background: linear-gradient(135deg, #1a1f3a 0%, #151829 100%);
             border-radius: 12px;
-            overflow: hidden;
+            overflow-x: auto;
+            overflow-y: visible;
             border: 1px solid #2a2f4a;
+            -webkit-overflow-scrolling: touch;
         }
         
         table {
             width: 100%;
+            min-width: 700px;
             border-collapse: collapse;
         }
         
@@ -287,11 +290,18 @@
             .header {
                 padding: 20px 0;
             }
+            .card {
+                padding: 20px;
+            }
             table {
-                font-size: 14px;
+                font-size: 13px;
             }
             th, td {
-                padding: 12px 10px;
+                padding: 12px 8px;
+                white-space: nowrap;
+            }
+            th {
+                font-size: 11px;
             }
         }
     </style>
