--- a/public/index.html
+++ b/public/index.html
@@ -401,7 +401,7 @@
             const { compId, othersEntries, yourEntries, overallEntries, currentOdds, packages } = data;
             
             let html = '<div class="stats">';
-            html += `<div class="stat-card"><div class="stat-label">Total Competitors</div><div class="stat-value">${othersEntries.toLocaleString()}</div></div>`;
+            html += `<div class="stat-card"><div class="stat-label">Other Entries</div><div class="stat-value">${othersEntries.toLocaleString()}</div></div>`;
             html += `<div class="stat-card"><div class="stat-label">Your Entries</div><div class="stat-value">${yourEntries.toLocaleString()}</div></div>`;
             html += `<div class="stat-card"><div class="stat-label">Total Entries</div><div class="stat-value">${overallEntries.toLocaleString()}</div></div>`;
             
